<resources>
    <string name="app_name">Cleo</string>
    <string name="write_here">Write here</string>
    <string name="send_button">send button</string>
    <string name="app_logo">app_logo</string>
    <string name="write_your_message">Write your message</string>
    <string name="web_client_id">675425670311-l5rvt3jl6vtalrjveetoidb1vjvf6s8h.apps.googleusercontent.com</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up"> Sign up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="welcome">Welcome!</string>
    <string name="sign_in"> Sign in</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="don_t_have_an_account">Don\'t have an account? </string>
    <string name="verification_note">Please check your inbox for a verification email from Cleo. If not found check your spam.</string>
    <string name="email_is_not_verified">Email is Not verified!</string>
    <string name="check_verification">Check Verification</string>
    <string name="email_is_verified">Email is Verified</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="continue_with_email">Continue with Email</string>
    <string name="settings">Settings</string>
    <string name="no_credits_left">No credits left</string>
    <string name="no_credits_dialog_text">We need money to pay our API bills. Support us by buying our premium membership or watch an ad to get 3 free credits</string>
    <string name="buy_premium">Buy Premium</string>
    <string name="watch_ad">Watch AD</string>

    <string name="play_console_license">MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAgvmhPdPKCRBiJfqQFOZJVXU+lV4LYBwkCgFcIpKyF1QV5uVG5bHfTfrNXrNpfpJRy+z+kh1jA/mcA7U8WhSkEL3iisjeV0vg+cjQWOISrlok1Ihfv82j6dvpmKZ6aEfHLR4nlWfNK4n0cEMbKGMp0+Fhstp3r1eQvc6BsK7pOjrnB7cXpMwFtlc+TU/UXYKUeLPb5onMwWVC9kQCJn6taJ60wlQufenY4+T5BNkHgpZiCAjPahQpMJTB4lAk51o2M/+YfN+hz0fYcLpzn/PmmOVUAe5+J6PqUECwb1uv98bFWL1o+t8sYURtxpROF302cJhe3ROEoNFdCFEjfuRyVwIDAQAB</string>
    <string name="product_id">monthly_premium</string>
</resources>