<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="40dp"
    android:paddingEnd="40dp"
    tools:context=".SignUpWithEmailActivity"
    android:gravity="center_vertical"
    android:background="@color/bg_color">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:fontFamily="@font/nunito_semibold"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="30dp"/>



    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxBackgroundColor="@color/bg_color_light"
        app:boxStrokeWidth="2dp"
        app:boxCornerRadiusBottomEnd="13dp"
        app:boxCornerRadiusBottomStart="13dp"
        app:boxCornerRadiusTopEnd="13dp"
        app:boxCornerRadiusTopStart="13dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="name"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxStrokeWidth="2dp"
        app:boxBackgroundColor="@color/bg_color_light"
        app:boxCornerRadiusBottomEnd="13dp"
        app:boxCornerRadiusBottomStart="13dp"
        app:boxCornerRadiusTopEnd="13dp"
        app:boxCornerRadiusTopStart="13dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="emailAddress"
            android:hint="@string/email"
            android:textColor="@color/white"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxStrokeWidth="2dp"
        app:boxBackgroundColor="@color/bg_color_light"
        app:boxCornerRadiusBottomEnd="13dp"
        app:boxCornerRadiusBottomStart="13dp"
        app:boxCornerRadiusTopEnd="13dp"
        app:boxCornerRadiusTopStart="13dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:hint="@string/password"
            android:textColor="@color/white"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corner"
        android:layout_marginTop="40dp"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:id="@+id/signupBtn"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:fontFamily="@font/nunito_regular"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textColor="@color/teal"
            android:textAlignment="center"
            android:fontFamily="@font/nunito_regular"/>



    </LinearLayout>



<!--    <Button-->
<!--        android:id="@+id/checkVerificationBtn"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_below="@id/signupBtn"-->
<!--        android:layout_marginStart="20dp"-->
<!--        android:layout_marginTop="20dp"-->
<!--        android:visibility="invisible"-->
<!--        android:layout_marginEnd="20dp"-->
<!--        android:layout_marginBottom="20dp"-->
<!--        android:background="@drawable/rounded_corner"-->
<!--        android:text="check verfication"-->
<!--        android:textColor="@color/white" />-->


<!--    <Button-->
<!--        android:id="@+id/veriText"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_below="@id/checkVerificationBtn"-->
<!--        android:layout_marginStart="20dp"-->
<!--        android:layout_marginTop="20dp"-->
<!--        android:textColor="@color/white"-->
<!--        android:visibility="invisible"-->
<!--        android:layout_marginEnd="20dp"-->
<!--        android:layout_marginBottom="20dp"-->
<!--        android:text="" />-->

</LinearLayout>