<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Signup.CheckVerificationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/rounded_corner"
        android:backgroundTint="@color/bg_color_light"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingStart="12dp"
        android:paddingTop="10dp"
        android:paddingEnd="12dp"
        android:paddingBottom="15dp">

        <TextView
            android:id="@+id/verificationText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/email_is_not_verified"
            android:textColor="@color/red"
            android:textSize="28sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="13dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="13dp"
            android:fontFamily="@font/nunito_semibold"
            android:text="@string/verification_note"
            android:textColor="@color/white"
            android:textSize="18sp" />


        <Button
            android:id="@+id/checkVerificationBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_corner"
            android:backgroundTint="@color/teal"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/check_verification"
            android:textColor="@color/white"/>


    </LinearLayout>

</LinearLayout>