<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="323dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/rounded_corner"
    android:backgroundTint="@color/bg_color"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/no_credits_left"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_color_light"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="5dp"
        android:textSize="14sp"
        android:paddingBottom="10dp"
        android:text="@string/no_credits_dialog_text"
        android:textColor="@color/white"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:background="@drawable/rounded_bottom_corner"
        android:backgroundTint="@color/bg_color_light">

        <Button
            android:id="@+id/getProButton"
            android:layout_width="130dp"
            android:layout_height="40dp"
            android:text="@string/get_pro"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:fontFamily="@font/nunito_regular"
            android:background="@drawable/rounded_corner"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/watchAdButton"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:text="@string/watch_ad"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:background="@drawable/rounded_corner"
            android:backgroundTint="@color/bg_color"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp" />

    </LinearLayout>


</LinearLayout>